<resources>
    <string name="app_name">pracaV2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name=""></string>-->
    <!--    Auth     -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>